name:                semdoc
version:             0.1.0
synopsis:            Evaluate code snippets in Literate Haskell.
homepage:            https://toktok.github.io/semdoc
license:             AGPL-3
license-file:        LICENSE
author:              iphydf
maintainer:          iphydf@users.noreply.github.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable semdoc
  main-is:             Main.hs
  ghc-options:
      -Wall
  build-depends:
      base >= 4 && < 5
    , containers
    , ghc
    , ghc-paths
    , groom
    , mtl
    , pandoc
    , pandoc-types
    , regex-tdfa
  hs-source-dirs:      src
  default-language:    Haskell2010
