name:                semdoc
version:             0.1.0
synopsis:            Evaluate code snippets in Literate Haskell.
homepage:            https://toktok.github.io/semdoc
license:             AGPL-3
license-file:        LICENSE
author:              iphydf
maintainer:          iphydf@users.noreply.github.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable semdoc
  main-is:             Main.hs
  ghc-options:
      -Wall
  build-depends:
      base            >= 4 && < 5
    , Glob
    , containers
    , ghc             == 7.10.3
    , ghc-paths
    , groom
    , mtl
    , pandoc          >= 1.17
    , pandoc-types
    , regex-tdfa
  hs-source-dirs:      src
  default-language:    Haskell2010
